fixed promo overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,8 +108,6 @@ body {
 .page-header .promo {
   color: #fff;
   text-align: center;
-}
-.page-header .promo .container {
   min-height: 662px;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -117,26 +115,26 @@ body {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
 }
 @media (min-width: 700px) {
-  .page-header .promo .container {
+  .page-header .promo {
     height: 743px;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
-    background: url(../img/download-hand-sm.png) 100% 100% no-repeat;
+    background: url(../img/download-hand-sm.png) 70% 100% no-repeat;
   }
 }
 .page-header .promo__hand {
@@ -173,9 +171,8 @@ body {
   }
 }
 .page-header .promo .download {
+  z-index: 200;
   padding-top: 30px;
-  margin-right: -40px;
-  margin-left: -40px;
   text-align: center;
   min-height: 271px;
   background: #1d2631;
@@ -186,6 +183,9 @@ body {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-left: 30px;
   padding-right: 30px;
 }
@@ -226,6 +226,7 @@ body {
 @media (min-width: 700px) {
   .page-header .promo .download__options {
     padding: 30px 10px 0;
+    max-width: 300px;
   }
 }
 @media (min-width: 500px) {
@@ -466,37 +467,6 @@ body {
     fill: #f2f2f2;
   }
 }
-.reviews h3 {
-  -webkit-order: -1;
-      -ms-flex-order: -1;
-          order: -1;
-  margin: 50px 0 0px;
-  font-size: 18px;
-}
-.reviews h4 {
-  display: none;
-  font-size: 14px;
-  font-weight: 400;
-}
-@media (min-width: 700px) {
-  .reviews {
-    padding: 0;
-  }
-  .reviews p {
-    font-size: 18px;
-  }
-  .reviews h3 {
-    -webkit-order: 0;
-        -ms-flex-order: 0;
-            order: 0;
-    font-size: 20px;
-    margin: 0;
-  }
-  .reviews h4 {
-    margin-top: 8px;
-    display: inline-block;
-  }
-}
 .reviews-slider {
   overflow: hidden;
   position: relative;
@@ -506,13 +476,68 @@ body {
   position: absolute;
   opacity: 0;
 }
+.reviews-slider__controls {
+  position: absolute;
+  bottom: 48px;
+  width: 100px;
+  left: 50%;
+  margin-left: -50px;
+}
+.reviews-slider__controls label {
+  display: inline-block;
+  box-sizing: content-box;
+  cursor: pointer;
+  width: 6px;
+  height: 6px;
+  background: #bec2c7;
+  border-radius: 50%;
+  border: 3px solid #283645;
+}
 .reviews-slider__items {
   overflow: hidden;
 }
 .reviews-slider__item {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: absolute;
   left: 100%;
   width: 100%;
+  font-size: 14px;
+}
+.reviews-slider__item h3 {
+  -webkit-order: -1;
+      -ms-flex-order: -1;
+          order: -1;
+  margin: 50px 0 0px;
+  font-size: 18px;
+}
+.reviews-slider__item h4 {
+  display: none;
+  font-size: 14px;
+  font-weight: 400;
+}
+@media (min-width: 700px) {
+  .reviews-slider__item {
+    padding: 0;
+  }
+  .reviews-slider__item p {
+    font-size: 18px;
+  }
+  .reviews-slider__item h3 {
+    -webkit-order: 0;
+        -ms-flex-order: 0;
+            order: 0;
+    font-size: 20px;
+    margin: 0;
+  }
+  .reviews-slider__item h4 {
+    margin-top: 8px;
+    display: inline-block;
+  }
 }
 .reviews-slider [id^="slider-trigger"]:checked + .reviews-slider__item {
   left: 0;
